--- a/EmployeeManagement/EmployeeManagement/EmployeeManagement.Logic/EmployeeManagement.Logic.csproj
+++ b/EmployeeManagement/EmployeeManagement/EmployeeManagement.Logic/EmployeeManagement.Logic.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EmployeeManagement.Common\EmployeeManagement.Common.csproj" />
     <ProjectReference Include="..\EmployeeManagement.Data\EmployeeManagement.Data.csproj" />
   </ItemGroup>
